Fixed overflow of text issues when a single string with no spaces is entered in description.

--- a/HabitCalendar/wwwroot/css/site.css
+++ b/HabitCalendar/wwwroot/css/site.css
@@ -211,6 +211,7 @@
     margin-bottom: 10px;
     padding: 8px;
     min-height: 50px;
+    overflow-wrap: anywhere;
 }
 .table__anchor, .table__anchor:active {
     text-decoration: none;
